Romanian language updates

--- a/hu/kapcsolat.html
+++ b/hu/kapcsolat.html
@@ -12,7 +12,7 @@
                         <div class="languagebar">
                                 <ul style="list-style: none;">
                                         <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">HU /</a></li>
-                                        <li style="display: inline;"><a href="../index.html" style="color: #fffaec;">RO /</a></li>
+                                        <li style="display: inline;"><a href="../ro/index.html" style="color: #fffaec;">RO</a></li>
                                 </ul>
                         </div>
 
