--- a/ro/Materiale/salcam.html
+++ b/ro/Materiale/salcam.html
@@ -4,18 +4,18 @@
         <head>
                 <meta charset="utf-8">
                 <title>Salcâmul - Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="../Style/stylesheet.css" media="screen">
+                <link rel="stylesheet" type="text/css" href="../../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
                 <div class="logo">
-                        <a href="../index.html"><img id="logo" src="../images/Logo3.png" alt="logo"></a>
+                        <a href="../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
                 
                 </div>
 
                 <div class="navbar">
                         <ul class="top-level-navbar">
-                                <li><a href="../index.html"><img src="../images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="../index.html"><img src="../../images/home.png" width="16" height="16"> Home</a></li>
                                 <li><a href="#">Produse</a>
                                         <ul class="second-level-navbar">
                                                 <li><a href="#">Elemente lipite</a>
@@ -48,7 +48,7 @@
 
                         <article>
                                 <div class="content">
-                                        <a href="../images/salcam-home.jpg" target="_blank"><img src="../images/salcam-home-thumbnail.jpg" alt="Salcâm" class="imagehomeleft" width="225" height="454"></a>
+                                        <a href="../../images/salcam-home.jpg" target="_blank"><img src="../../images/salcam-home-thumbnail.jpg" alt="Salcâm" class="imagehomeleft" width="225" height="454"></a>
                                         <h2>Salcâmul:</h2>
                                         <p>Salcâmul face parte din familia Fabacae, este un arbore melifer, cu tulpină înaltă și ramuri spinoase rare.</p>
                                         <p>Fiind aclimatizat în America de Nord, Europa, Africa de Sud și Asia.</p>
