--- a/ro/Produse/Lipite/grinzi.html
+++ b/ro/Produse/Lipite/grinzi.html
@@ -4,17 +4,17 @@
         <head>
                 <meta charset="utf-8">
                 <title>Grinzi pentru construcții și amenajări - Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="../../Style/stylesheet.css" media="screen">
+                <link rel="stylesheet" type="text/css" href="../../../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
                 <div class="logo">
-                        <a href="../../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
+                        <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
                 </div>
 
                 <div class="navbar">
                         <ul class="top-level-navbar">
-                                <li><a href="../../index.html"><img src="../../images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="../../index.html"><img src="../../../images/home.png" width="16" height="16"> Home</a></li>
                                 <li><a href="#">Produse</a>
                                         <ul class="second-level-navbar">
                                                 <li><a href="#">Elemente lipite</a>
@@ -50,9 +50,9 @@
                                         </div>
                                         <br>
                                         <hr class="thinhr">
-                                        <a href="../../images/salcam-lipit1.jpg" target="_blank"><img src="../../images/salcam-lipit1-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
-                                        <a href="../../images/salcam-lipit2.jpg" target="_blank"><img src="../../images/salcam-lipit2-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
-                                        <a href="../../images/salcam-lipit3.jpg" target="_blank"><img src="../../images/salcam-lipit3-thumbnail.jpg" alt="Grindă lipită" class="image" width="325" height="183"></a>
+                                        <a href="../../../images/salcam-lipit1.jpg" target="_blank"><img src="../../../images/salcam-lipit1-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
+                                        <a href="../../../images/salcam-lipit2.jpg" target="_blank"><img src="../../../images/salcam-lipit2-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
+                                        <a href="../../../images/salcam-lipit3.jpg" target="_blank"><img src="../../../images/salcam-lipit3-thumbnail.jpg" alt="Grindă lipită" class="image" width="325" height="183"></a>
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
