--- a/ro/Produse/Lipite/podele.html
+++ b/ro/Produse/Lipite/podele.html
@@ -3,18 +3,18 @@
 <html>
         <head>
                 <meta charset="utf-8">
-                <title>Elemente lipite din lemn - Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="../../Style/stylesheet.css" media="screen">
+                <title>Podele - Producție și Prestări Alexander S.R.L.</title>
+                <link rel="stylesheet" type="text/css" href="../../../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
                 <div class="logo">
-                        <a href="../../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
+                        <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
                 </div>
 
                 <div class="navbar">
                         <ul class="top-level-navbar">
-                                <li><a href="../../index.html"><img src="../../images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="../../index.html"><img src="../../../images/home.png" width="16" height="16"> Home</a></li>
                                 <li><a href="#">Produse</a>
                                         <ul class="second-level-navbar">
                                                 <li><a href="#">Elemente lipite</a>
@@ -45,31 +45,40 @@
                 <div class="content-box">
                         <article>
                                 <div class="content">
-                                        <h1>Elemente lipite din lemn</h1>
+                                        <div class="sitenav">
+                                                <a href="./elementelipite.html" style="color: #fffaec">Elemente lipite din lemn </a>&#171; Podele interior
+                                        </div>
+                                        <br>
+                                        <hr class="thinhr">
+                                        <a href="../../../images/podea-salcam2.png" target="_blank"><img src="../../../images/podea-salcam2.png" alt="Podea din salcâm" class="image" width="325" height="183"></a>
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
-                                                        <h2>Sortimente:</h2>
+                                                        <h2>Domeniu de utilizare:</h2>
                                                 </div>
                                                 <div class="column2">
                                                         <ul class="list">
-                                                                <li><a href="./grinzi.html">Grinzi pentru construcții și amenajări</a></li>
-                                                                <li><a href="./fatada.html">Fațadă lemn</a></li>
-                                                                <li><a href="./terase.html">Terase, decking</a></li>
-                                                                <li><a href="./podele.html">Podele interior</a></li>
+                                                                <li>Amenajări interior</li>
+                                                                <li>Podele</li>
                                                         </ul>
                                                 </div>
                                         </div>
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
-                                                        <h2>Lemn din următoarele specii:</h2>
+                                                        <h2>Dimensiuni:</h2>
                                                 </div>
                                                 <div class="column2">
                                                         <ul class="list">
-                                                                <li>Salcâm</li>
-                                                                <li>Stejar</li>
-                                                                <li>Pin nordic</li>
+                                                                <li>Lungime: la cerere pâna la 6 metri.</li>
+                                                                <li>Secțiuni:
+                                                                        <ul>
+                                                                                <li>23x100</li>
+                                                                                <li>23x120</li>
+                                                                                <li>23x140</li>
+                                                                                <li>45x120 etc</li>
+                                                                        </ul>
+                                                                </li>
                                                         </ul>
                                                 </div>
                                         </div>
