--- a/ro/Produse/Lipite/terase.html
+++ b/ro/Produse/Lipite/terase.html
@@ -3,18 +3,18 @@
 <html>
         <head>
                 <meta charset="utf-8">
-                <title>Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="../../Style/stylesheet.css" media="screen">
+                <title>Terase - Producție și Prestări Alexander S.R.L.</title>
+                <link rel="stylesheet" type="text/css" href="../../../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
                 <div class="logo">
-                        <a href="../../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
+                        <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
                 </div>
 
                 <div class="navbar">
                         <ul class="top-level-navbar">
-                                <li><a href="../../index.html"><img src="../../images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="../../index.html"><img src="../../../images/home.png" width="16" height="16"> Home</a></li>
                                 <li><a href="#">Produse</a>
                                         <ul class="second-level-navbar">
                                                 <li><a href="#">Elemente lipite</a>
@@ -27,7 +27,7 @@
                                                 </li>
                                                 <li><a href="#">Lemn rotund</a>
                                                         <ul class="third-level-navbar">
-                                                                <li><a href="./lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                                <li><a href="../Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
                                                         </ul>
                                                 </li>
                                                 <li><a href="#">Materiale</a>
@@ -46,9 +46,12 @@
                         <article>
                                 <div class="content">
                                         <div class="sitenav">
-                                                <a href="./lemnrotund.html" style="color: #fffaec">Lemn rotund </a>&#171; Lemn pentru construcții și amenajări exterioare
+                                                <a href="./elementelipite.html" style="color: #fffaec">Elemente lipite din lemn </a>&#171; Podele terase (deking)
                                         </div>
                                         <br>
+                                        <a href="../../../images/terasa-salcam1.jpg" target="_blank"><img src="../../../images/terasa-salcam1-thumbnail.jpg" alt="Terasă salcâm" class="image" width="325" height="183"></a>
+                                        <a href="../../../images/terasa-salcam2.jpg" target="_blank"><img src="../../../images/terasa-salcam2-thumbnail.jpg" alt="Terasă salcâm" class="image" width="325" height="183"></a>
+                                        <a href="../../../images/podea-salcam1.jpg" target="_blank"><img src="../../../images/podea-salcam1-thumbnail.jpg" alt="Podea salcâm" class="image" width="325" height="183"></a>                                       
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
@@ -56,26 +59,9 @@
                                                 </div>
                                                 <div class="column2">
                                                         <ul class="list">
-                                                                <li>Construcții și amenajări locuri de joacă pentru copii</li>
-                                                                <li>Garduri și împrejmuiri</li>
-                                                                <li>Pavaje</li>
-                                                                <li>Pereți susținere</li>
-                                                                <li>Construcții din lemn rotund</li>
-                                                        </ul>
-                                                </div>
-                                        </div>
-                                        <hr class="thinhr">
-                                        <div class="row">
-                                                <div class="column1">
-                                                        <h2>Tip:</h2>
-                                                </div>
-                                                <div class="column2">
-                                                        <ul class="list">
-                                                                <li>cu coajă</li>
-                                                                <li>fără coajă</li>
-                                                                <li>șlefuit</li>
-                                                                <li>fără alburn și șlefuit</li>
-                                                                <li>frezat</li>
+                                                                <li>Terase exterior</li>
+                                                                <li>Placări de suprafețe construite</li>
+                                                                <li>Pereți ornamentali</li>
                                                         </ul>
                                                 </div>
                                         </div>
@@ -86,8 +72,17 @@
                                                 </div>
                                                 <div class="column2">
                                                         <ul class="list">
-                                                                <li>Lemnul se livrează la dimensiunile cerute de client.</li>
-                                                                <li>de la &#8960;6cm până la &#8960;70cm.
+                                                                <li>Lungime: la cerere pâna la 6 metri.</li>
+                                                                <li>Secțiuni:
+                                                                        <ul>
+                                                                                <li>23x60</li>
+                                                                                <li>23x70</li>
+                                                                                <li>23x80</li>
+                                                                                <li>23x90</li>
+                                                                                <li>23x100</li>
+                                                                                <li>23x120</li>
+                
+                                                                        </ul>
                                                                 </li>
                                                         </ul>
                                                 </div>
@@ -95,17 +90,16 @@
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
-                                                        <h2>Material folosit:</h2>
+                                                        <h2>Material:</h2>
                                                 </div>
-                                                <div class="column2">                                                        
+                                                <div class="column2">
                                                         <ul class="list">
-                                                                <li>Salcâm</li>
-                                                                <li>Stejar</li>
-                                                                <li>Rășinoase</li>
+                                                                <li>Lemn îmbinat în dinți (finger-jointed)</li>
+                                                                <li>Salcâm, stejar, pin nordic, larice siberian.</li>
                                                         </ul>
                                                 </div>
                                         </div>
-                                        <hr class="thinhr">     
+                                        <hr class="thinhr">
                                 </div>
                         </article>
                 </div>
