--- a/ro/contact.html
+++ b/ro/contact.html
@@ -3,27 +3,27 @@
 <html>
         <head>
                 <meta charset="utf-8">
-                <title>Catalog - Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="./Style/stylesheet.css" media="screen">
+                <title>Contact - Producție și Prestări Alexander S.R.L.</title>
+                <link rel="stylesheet" type="text/css" href="../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
                 <div class="top">
                         <div class="languagebar">
                                 <ul style="list-style: none;">
-                                        <li style="display: inline;"><a href="./hu/index.html" style="color: #fffaec;">HU /</a></li>
-                                        <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">RO /</a></li>
+                                        <li style="display: inline;"><a href="../hu/index.html" style="color: #fffaec;">HU /</a></li>
+                                        <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">RO</a></li>
                                 </ul>
                         </div>
 
                         <div class="logo">
-                                <a href="./index.html"><img id="logo" src="./images/Logo3.png" alt="logo"></a>
+                                <a href="./index.html"><img id="logo" src="../images/Logo3.png" alt="logo"></a>
                         </div>
                 </div>
 
                 <div class="navbar">
                         <ul class="top-level-navbar">
-                                <li><a href="./index.html"><img src="./images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="./index.html"><img src="../images/home.png" width="16" height="16"> Home</a></li>
                                 <li><a href="#">Produse</a>
                                         <ul class="second-level-navbar">
                                                 <li><a href="#">Elemente lipite</a>
@@ -39,6 +39,7 @@
                                                                 <li><a href="./Produse/Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
                                                         </ul>
                                                 </li>
+
                                                 <li><a href="#">Materiale</a>
                                                         <ul class="third-level-navbar">
                                                                 <li><a href="./Materiale/salcam.html">Salcâm</a></li>
@@ -53,10 +54,27 @@
                 
                 <div class="content-box">
                         <article>
-                                <div class="content">
-                                        <h1>Catalog de produse</h1>
-                                        <a href="./Documents/Catalog.pdf"><img src="images/catalog.png" width="180px" height="255px" style="padding-left: 64px;margin:auto"></a>
-                                        <p>Dați click pe copertă pentru descărcarea catalogului.</p>
+                                <div class="contact">
+                                        <div class="row">
+                                                <div class="column1">
+                                                        <h1>Contact:</h1>
+                                                </div>
+                                                <div class="column2">
+                                                        <p>Producție și Prestări Alexander S.R.L.</p>
+                                                        <p>Ozun, Str.Sfântu Gheorghe nr.231/A</p>
+                                                        <p>Covasna, România</p>
+                                                        <br>
+                                                        <p>Mobil: +40 730 960 200</p>
+                                                        <p>Persoana de contact: Golicza Zoltán</p>
+                                                        <p>E-mail: <a href="mailto:alexander.robinia@gmail.com">alexander.robinia@gmail.com</a></p>
+                                                </div>
+                                        </div>
+                                </div>
+                                <hr class="thinhr">
+                                <br>
+                                <h2>Ne găsiți pe Google Maps:</h2>
+                                <div class="map">
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20258.574969948535!2d25.83319210225322!3d45.800685445450206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa1e499450a061517!2sProduc%C8%9Bie%20%C8%99i%20Prest%C4%83ri%20Alexander%20SRL!5e0!3m2!1shu!2sro!4v1627639176193!5m2!1shu!2sro" width="600" height="450" style="border:0;margin:auto;" allowfullscreen="" loading="lazy"></iframe>
                                 </div>
                         </article>
                 </div>
