--- a/ro/Produse/Rotunde/lemnrotund.html
+++ b/ro/Produse/Rotunde/lemnrotund.html
@@ -4,17 +4,17 @@
         <head>
                 <meta charset="utf-8">
                 <title>Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="../../Style/stylesheet.css" media="screen">
+                <link rel="stylesheet" type="text/css" href="../../../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
                 <div class="logo">
-                        <a href="../../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
+                        <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
                 </div>
 
                 <div class="navbar">
                         <ul class="top-level-navbar">
-                                <li><a href="../../index.html"><img src="../../images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="../../index.html"><img src="../../../images/home.png" width="16" height="16"> Home</a></li>
                                 <li><a href="#">Produse</a>
                                         <ul class="second-level-navbar">
                                                 <li><a href="#">Elemente lipite</a>
