--- a/ro/index.html
+++ b/ro/index.html
@@ -3,7 +3,7 @@
 <html>
         <head>
                 <meta charset="utf-8">
-                <title>Főoldal - Alexander kft.</title>
+                <title>Pagină principală - Producție și Prestări Alexander S.R.L.</title>
                 <link rel="stylesheet" type="text/css" href="../Style/stylesheet.css" media="screen">
         </head>
 
@@ -11,8 +11,8 @@
                 <div class="top">
                         <div class="languagebar">
                                 <ul style="list-style: none;">
-                                        <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">HU /</a></li>
-                                        <li style="display: inline;"><a href="../ro/index.html" style="color: #fffaec;">RO</a></li>
+                                        <li style="display: inline;"><a href="../hu/index.html" style="color: #fffaec;">HU /</a></li>
+                                        <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">RO</a></li>
                                 </ul>
                         </div>
 
@@ -22,80 +22,80 @@
                 </div>
 
                 <div class="navbar">
-                        <ul class="top-level-navbar-hu">
-                                <li><a href="./index.html"><img src="../images/home.png" width="16" height="16"> Főoldal</a></li>
-                                <li><a href="#">Termékeink</a>
-                                        <ul class="second-level-navbar-hu">
-                                                <li><a href="#">Ragasztott elemek</a>
-                                                        <ul class="third-level-navbar-ragasztott-hu">
-                                                                <li><a href="./Termekek/Ragasztott/gerendak.html">Építkezési gerendák</a></li>
-                                                                <li><a href="./Termekek/Ragasztott/homlokzat.html">Homlokzat</a></li>
-                                                                <li><a href="./Termekek/Ragasztott/terasz.html">Terasz és deking</a></li>
-                                                                <li><a href="./Termekek/Ragasztott/padlo.html">Padló elemek</a></li>
+                        <ul class="top-level-navbar">
+                                <li><a href="./index.html"><img src="../images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="#">Produse</a>
+                                        <ul class="second-level-navbar">
+                                                <li><a href="#">Elemente lipite</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Produse/Lipite/grinzi.html">Grinzi pentru construcții și amenajări</a></li>
+                                                                <li><a href="./Produse/Lipite/fatada.html">Fațadă lemn</a></li>
+                                                                <li><a href="./Produse/Lipite/terase.html">Terase, decking</a></li>
+                                                                <li><a href="./Produse/Lipite/podele.html">Podele interior</a></li>
                                                         </ul>
                                                 </li>
-                                                <li><a href="#">Gömbfa</a>
-                                                        <ul class="third-level-navbar-hu">
-                                                                <li><a href="./Termekek/Gomb/gombfa.html">Építkezési- és szabadtéri elemek</a></li>
+                                                <li><a href="#">Lemn rotund</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Produse/Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
                                                         </ul>
                                                 </li>
-                                                <li><a href="#">Fa kategóriák</a>
-                                                        <ul class="third-level-navbar-kategoria-hu">
-                                                                <li><a href="./Kategoria/akac.html">Akác</a></li>
+                                                <li><a href="#">Materiale</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Materiale/salcam.html">Salcâm</a></li>
                                                         </ul>
                                                 </li>
                                         </ul>
                                 </li>
-                                <li><a href="./katalogus.html">Katalógus</a></li>
-                                <li><a href="./kapcsolat.html">Elérhetőség</a></li>
+                                <li><a href="./catalogue.html">Catalog</a></li>
+                                <li><a href="./contact.html">Contact</a></li>
                         </ul>
                 </div>
                 
                 <div class="content-box">
-                        <div class="row">
+                        <div class="row"> 
                                 <div class="columngallery1">
-                                        <h2>Bemutató:</h1>
+                                        <h2>Galerie cu produse:</h1>
                                         <div class="slideshow-container">
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">1 / 7</div>
                                                         <img src="../images/salcam-lipit1.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/ragasztottelemek.html" style="color: #fffaec;">Ragasztott elem</a></div>
+                                                        <div class="text"><a href="./Produse/Lipite/elementelipite.html" style="color: #fffaec;">Salcâm lipit</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">2 / 7</div>
                                                         <img src="../images/salcam-lipit2.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/ragasztottelemek.html" style="color: #fffaec;">Ragasztott elem</a></div>
+                                                        <div class="text"><a href="./Produse/Lipite/elementelipite.html" style="color: #fffaec;">Salcâm lipit</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">3 / 7</div>
                                                         <img src="../images/salcam-lipit3.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/ragasztottelemek.html" style="color: #fffaec;">Ragasztott elem</a></div>
+                                                        <div class="text"><a href="./Produse/Lipite/elementelipite.html" style="color: #fffaec;">Salcâm lipit</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">4 / 7</div>
                                                         <img src="../images/terasa-salcam1.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Terasz</a></div>
+                                                        <div class="text"><a href="./Produse/Lipite/terase.html" style="color: #fffaec;">Terasă din salcâm</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">5 / 7</div>
                                                         <img src="../images/terasa-salcam2.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Terasz</a></div>
+                                                        <div class="text"><a href="./Produse/Lipite/terase.html" style="color: #fffaec;">Terasă din salcâm</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">6 / 7</div>
                                                         <img src="../images/terasa-salcam3.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Terasz</a></div>
+                                                        <div class="text"><a href="./Produse/Lipite/terase.html" style="color: #fffaec;">Terasă din salcâm</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">7 / 7</div>
                                                         <img src="../images/podea-salcam1.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/padlo.html" style="color: #fffaec;">Padló</a></div>
+                                                        <div class="text"><a href="./Produse/Lipite/podele.html" style="color: #fffaec;">Podea din salcâm</a></div>
                                                 </div>
 
                                                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -116,11 +116,7 @@
                                 
                                 <div class="columngallery2">
                                         <div class="content" style="padding: 64px">
-                                                <p>Cégünk több mint 18 éve készít kiváló minőségű akác-, csere- és fenyőtermékeket.</p>
-                                                <p>Rengeteg tapasztalattal rendelkezünk, aminek ön is hasznát veheti!</p>
-                                                <p>Akár egyedi felhasználásra is kínálunk kiváló minőségű akác-, csere- és fenyőtermékeket.</p>
-                                                <p>Továbbá akár játszoterek építéséhez, kültéri berendezések vagy akár mezőgazdaságban is felhasználható elemeket biztosítunk.</p>
-                                                <p>Termékeinket FSC tanusítvánnyal is szállítjuk!</p>
+                                                <p>Ne ocupăm cu prelucrarea lemnului încă din anul 2004.</p>
                                         </div>
                                 </div>
                         </div>
