Bugfixes and content update

--- a/hu/Kategoria/akac.html
+++ b/hu/Kategoria/akac.html
@@ -9,37 +9,37 @@
 
         <body>
                 <div class="logo">
-                        <a href="../index.html"><img id="logo" src="../images/Logo3.png" alt="logo"></a>
+                        <a href="../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
                 
                 </div>
 
                 <div class="navbar">
-                        <ul class="top-level-navbar">
-                                <li><a href="../index.html"><img src="../images/home.png" width="16" height="16"> Home</a></li>
-                                <li><a href="#">Produse</a>
-                                        <ul class="second-level-navbar">
-                                                <li><a href="#">Elemente lipite</a>
-                                                        <ul class="third-level-navbar">
-                                                                <li><a href="../Produse/Lipite/grinzi.html">Grinzi pentru construcții și amenajări</a></li>
-                                                                <li><a href="../Produse/Lipite/fatada.html">Fațadă lemn</a></li>
-                                                                <li><a href="../Produse/Lipite/terase.html">Terase, decking</a></li>
-                                                                <li><a href="../Produse/Lipite/podele.html">Podele interior</a></li>
+                        <ul class="top-level-navbar-hu">
+                                <li><a href="../index.html"><img src="../../images/home.png" width="16" height="16"> Főoldal</a></li>
+                                <li><a href="#">Termékeink</a>
+                                        <ul class="second-level-navbar-hu">
+                                                <li><a href="#">Ragasztott elemek</a>
+                                                        <ul class="third-level-navbar-ragasztott-hu">
+                                                                <li><a href="../Termekek/Ragasztott/gerendak.html">Építkezési gerendák</a></li>
+                                                                <li><a href="../Termekek/Ragasztott/homlokzat.html">Homlokzat</a></li>
+                                                                <li><a href="../Termekek/Ragasztott/terasz.html">Terasz és deking</a></li>
+                                                                <li><a href="../Termekek/Ragasztott/padlo.html">Padló elemek</a></li>
                                                         </ul>
                                                 </li>
-                                                <li><a href="#">Lemn rotund</a>
-                                                        <ul class="third-level-navbar">
-                                                                <li><a href="../Produse/Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                <li><a href="#">Gömbfa</a>
+                                                        <ul class="third-level-navbar-hu">
+                                                                <li><a href="../Termekek/Gomb/gombfa.html">Építkezési- és szabadtéri elemek</a></li>
                                                         </ul>
                                                 </li>
-                                                <li><a href="#">Materiale</a>
-                                                        <ul class="third-level-navbar">
-                                                                <li><a href="./salcam.html">Salcâm</a></li>
+                                                <li><a href="#">Fa kategóriák</a>
+                                                        <ul class="third-level-navbar-kategoria-hu">
+                                                                <li><a href="./akac.html">Akác</a></li>
                                                         </ul>
                                                 </li>
                                         </ul>
                                 </li>
-                                <li><a href="../catalogue.html">Catalog</a></li>
-                                <li><a href="../contact.html">Contact</a></li>
+                                <li><a href="./katalogus.html">Katalógus</a></li>
+                                <li><a href="./kapcsolat.html">Elérhetőség</a></li>
                         </ul>
                 </div>
 
@@ -48,7 +48,7 @@
 
                         <article>
                                 <div class="content">
-                                        <a href="../images/salcam-home.jpg" target="_blank"><img src="../images/salcam-home-thumbnail.jpg" alt="Salcâm" class="imagehomeleft" width="225" height="454"></a>
+                                        <a href="../../images/salcam-home.jpg" target="_blank"><img src="../../images/salcam-home-thumbnail.jpg" alt="Akácfa" class="imagehomeleft" width="225" height="454"></a>
                                         <h2>Salcâmul:</h2>
                                         <p>Salcâmul face parte din familia Fabacae, este un arbore melifer, cu tulpină înaltă și ramuri spinoase rare.</p>
                                         <p>Fiind aclimatizat în America de Nord, Europa, Africa de Sud și Asia.</p>
