--- a/hu/Termekek/Gomb/epitekezesigombfa.html
+++ b/hu/Termekek/Gomb/epitekezesigombfa.html
@@ -32,7 +32,7 @@
                                                 </li>
                                                 <li><a href="#">Fa kategóriák</a>
                                                         <ul class="third-level-navbar-kategoria-hu">
-                                                                <li><a href="../Kategoria/akac.html">Akác</a></li>
+                                                                <li><a href="../../Kategoria/akac.html">Akác</a></li>
                                                         </ul>
                                                 </li>
                                         </ul>
