--- a/hu/index.html
+++ b/hu/index.html
@@ -77,7 +77,7 @@
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">4 / 7</div>
                                                         <img src="../images/terasa-salcam1.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Terasz</a></div>
+                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Deking</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
@@ -89,13 +89,13 @@
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">6 / 7</div>
                                                         <img src="../images/terasa-salcam3.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Terasz</a></div>
+                                                        <div class="text"><a href="./Termekek/Ragasztott/terasz.html" style="color: #fffaec;">Akác deszka</a></div>
                                                 </div>
 
                                                 <div class="mySlides fade">
                                                         <div class="numbertext">7 / 7</div>
                                                         <img src="../images/podea-salcam1.jpg" style="width:600px">
-                                                        <div class="text"><a href="./Termekek/Ragasztott/padlo.html" style="color: #fffaec;">Padló</a></div>
+                                                        <div class="text"><a href="./Termekek/Ragasztott/padlo.html" style="color: #fffaec;">Járda</a></div>
                                                 </div>
 
                                                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
