--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
         <head>
+                <meta charset="utf-8">
+                <title>Index - Alexander kft.</title>
                <meta http-equiv="Refresh" content="0; url='./hu/index.html'"> 
         </head>
 </html>
