--- a/ro/index.html
+++ b/ro/index.html
@@ -10,10 +10,11 @@
         <body>
                 <div class="top">
                         <div class="languagebar">
-                                <ul style="list-style: none;">
+                                <ul style="list-style: none; margin-left: -32px;">
                                         <li style="display: inline;"><a href="../hu/index.html" style="color: #fffaec;">HU /</a></li>
                                         <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">RO</a></li>
                                 </ul>
+                                <img src="../images/fsc-logo.png" alt="FSC certified" style="width: 175px; float: left; margin-left: 32px">
                         </div>
 
                         <div class="logo">
