FSC update and fix

--- a/ro/Produse/Rotunde/lemnrotund.html
+++ b/ro/Produse/Rotunde/lemnrotund.html
@@ -8,8 +8,18 @@
         </head>
 
         <body>
-                <div class="logo">
-                        <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
+                <div class="top">
+                        <div class="languagebar">
+                                <ul style="list-style: none; margin-left: -32px;">
+                                        <li style="display: inline;"><a href="../../../hu/Termekek/Gomb/gombfa.html" style="color: #fffaec;">HU /</a></li>
+                                        <li style="display: inline;"><a href="../../index.html" style="color: #fffaec;">RO</a></li>
+                                </ul>
+                                <img src="../../../images/fsc-logo.png" alt="FSC certified" style="width: 175px; float: left; margin-left: 32px">
+                        </div>
+
+                        <div class="logo">
+                                <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
+                        </div>
                 </div>
 
                 <div class="navbar">
