--- a/ro/Produse/Lipite/grinzi.html
+++ b/ro/Produse/Lipite/grinzi.html
@@ -8,10 +8,19 @@
         </head>
 
         <body>
-                <div class="logo">
-                        <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
-                </div>
+                <div class="top">
+                        <div class="languagebar">
+                                <ul style="list-style: none; margin-left: -32px;">
+                                        <li style="display: inline;"><a href="../../../hu/Termekek/Ragasztott/gerendak.html" style="color: #fffaec;">HU /</a></li>
+                                        <li style="display: inline;"><a href="../../index.html" style="color: #fffaec;">RO</a></li>
+                                </ul>
+                                <img src="../../../images/fsc-logo.png" alt="FSC certified" style="width: 175px; float: left; margin-left: 32px">
+                        </div>
 
+                        <div class="logo">
+                                <a href="../../index.html"><img id="logo" src="../../../images/Logo3.png" alt="logo"></a>
+                        </div>
+                </div>
                 <div class="navbar">
                         <ul class="top-level-navbar">
                                 <li><a href="../../index.html"><img src="../../../images/home.png" width="16" height="16"> Home</a></li>
