General updates and fixes

--- a/hu/kapcsolat.html
+++ b/hu/kapcsolat.html
@@ -11,8 +11,8 @@
                 <div class="top">
                         <div class="languagebar">
                                 <ul style="list-style: none; margin-left: -32px;">
-                                        <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">HU /</a></li>
-                                        <li style="display: inline;"><a href="../ro/index.html" style="color: #fffaec;">RO</a></li>
+                                        <li style="display: inline;"><a href="./kapcsolat.html" style="color: #fffaec;">HU /</a></li>
+                                        <li style="display: inline;"><a href="../ro/contact.html" style="color: #fffaec;">RO</a></li>
                                 </ul>
                                 <img src="../images/fsc-logo.png" alt="FSC certified" style="width: 175px; float: left; margin-left: 32px">
                         </div>
