--- a/hu/kapcsolat.html
+++ b/hu/kapcsolat.html
@@ -57,7 +57,7 @@
                                 <div class="contact">
                                         <div class="row">
                                                 <div class="column1">
-                                                        <h1>Elérhetőségünk:</h1>
+                                                        <h1>Elérhetőség:</h1>
                                                 </div>
                                                 <div class="column2">
                                                         <p>Alexander kft.</p>
