Favicon and head tag updates.

--- a/hu/Termekek/Ragasztott/homlokzat.html
+++ b/hu/Termekek/Ragasztott/homlokzat.html
@@ -4,6 +4,12 @@
         <head>
                 <meta charset="utf-8">
                 <title>Homlokzat - Alexander kft.</title>
+                <meta property="og:image" content="../../../images/Logo-1200x627.png">
+                <meta property="og:description" content="Erdélyi faipari magánvállalkozás, az Alexander kft.">
+                <meta property="og:title" content="Alexander kft.">
+                <meta property="og:url" content="https://alexander-sic.com">
+                <meta name="keywords" content="akác, csere, fenyő, ragasztott fa, gerenda, homlokzat, terasz, decking, padló, parkett, gömbfa, tüzifa">
+                <link rel="icon" href="../../../favicon.ico" type="image/x-icon">
                 <link rel="stylesheet" type="text/css" href="../../../Style/stylesheet.css" media="screen">
         </head>
 
