--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
         <head>
                 <meta charset="utf-8">
                 <title>Index - Alexander kft.</title>
-               <meta http-equiv="Refresh" content="0; url='./hu/index.html'"> 
+                <meta property="og:image" content="/images/Logo-1200x627.png">
+                <meta property="og:description" content="Firma Producție ș¡ Prestări Alexander SRL se ocupă cu prelucrarea lemnului. Produsele noastre sunt: grinzi, fațade, terase, decking, podele, pardoseală, lemn rotund, cherestea, cherestea tivită și netivită, lemn de foc.">
+                <meta property="og:title" content="Alexander SRL">
+                <meta property="og:url" content="https://alexander-sic.com">
+                <link rel="icon" href="/favicon.ico" type="image/x-icon">
+                <meta http-equiv="Refresh" content="0; url='./hu/index.html'"> 
         </head>
 </html>
