--- a/ro/contact.html
+++ b/ro/contact.html
@@ -4,6 +4,11 @@
         <head>
                 <meta charset="utf-8">
                 <title>Contact - Producție și Prestări Alexander S.R.L.</title>
+                <meta property="og:image" content="../images/Logo-1200x627.png">
+                <meta property="og:description" content="Firma Producție ș¡ Prestări Alexander SRL se ocupă cu prelucrarea lemnului. Produsele noastre sunt: grinzi, fațade, terase, decking, podele, pardoseală, lemn rotund, cherestea, cherestea tivită și netivită, lemn de foc.">
+                <meta property="og:title" content="Alexander SRL">
+                <meta property="og:url" content="https://alexander-sic.com">
+                <link rel="icon" href="../favicon.ico" type="image/x-icon">
                 <link rel="stylesheet" type="text/css" href="../Style/stylesheet.css" media="screen">
         </head>
 
